# derive_constructor

./: Cargo.toml  README.md
examples/: demo.rs
src/: lib.rs
