[package]
name = "derive_constructor"
version = "0.1.0"
edition = "2018"
description = "Construct enums without naming them"
license = "MIT OR Apache-2.0"
repository = "https://github.com/panicbit/derive_constructor"

[lib]
proc-macro = true

[dependencies]
synstructure = "0.12.5"
quote = "1.0.9"
proc-macro2 = "1.0.28"
syn = "1.0.74"
